fixed input width on smaller screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -634,6 +634,9 @@ textarea:active,textarea:focus{
   #main textarea{
     width:90%;
   }
+    #comtent{
+        width:93%;
+    }
 }
 @media screen and (max-width: 565px){
   #header-search-bar{
